--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	    <link rel="stylesheet" href="style.css" />
 		<script src="style.js" defer></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<title>Countdown customer Tiphaine Test</title>
+		<title>Countdown customer Tiphaine Testrr</title>
 
 	</head>
 
