--- a/index.html
+++ b/index.html
@@ -6,31 +6,31 @@
 	    <link rel="stylesheet" href="style.css" />
 		<script src="style.js" defer></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<title>Countdown customer Tiphaine Testrr</title>
+		<title>Countdown customer Tiphaine</title>
 
 	</head>
 
 	<body>
 
 		<header>
-			<div class="logo">
-				<img src="media/Logo_countdownTiphaine.png">
+			<div>
+				<img id="logo" src="media/Logo_countdownTiphaine.png">
 			</div>
 
-			<div class="titre_appli">
+			<div>
 				<h1>Countdown app</h1>
 			</div>
 		</header>
 
 
-		<div class="compteur">
+		<div id="compteur">
 			<h1>Préparez <em>vous...</em></h1>
 
-			<table id="countDown">
+			<table>
 				<tr> 
 					<td colspan="4"></td>
 				</tr> 
-				<tr class="numbers"> 
+				<tr> 
 					<td id="days"></td>
 					<td id="hours"></td>
 					<td id="minutes"></td>
@@ -40,13 +40,13 @@
 		</div>
 
 
-		<div class="avant_titre">
+		<div id="avant_titre">
 			<p >Avant le passage du titre professionnel développeuse web /web mobile !</p>
 			
-			<div class="rappel">
+			<div id="rappel">
 				<p>Cliquez ici pour ajouter un rappel dans votre agenda</p>
 
-				<a href="https://lh3.googleusercontent.com/rMnTII1uQerO-RK9gZzHqWnuv5biKtccGG1N49xSrgaRJtckLeTO17CyqkSf4Sxghw=h900" target="_blank"><img class="bell" src="media/bell.png" title="alert bell"></a>
+				<a href="https://lh3.googleusercontent.com/rMnTII1uQerO-RK9gZzHqWnuv5biKtccGG1N49xSrgaRJtckLeTO17CyqkSf4Sxghw=h900" target="_blank"><img id="bell" src="media/bell.png" title="alert bell"></a>
 			</div>
 		</div>
 
@@ -56,17 +56,15 @@
 
 	<footer>
 		
-		<div class="gauche">
-			<p>Application créée par<br>Tiphaine Le Priol<br>
-
-			<a class="copyright" href="https://www.flaticon.com/authors/freepik" target="_blank" title="Freepik">Icone from Freepik</a>
-			</p>
+		<div id="gauche">
+			<p>Application créée par<br>Tiphaine Le Priol</p>
+			<!--copyright href="https://www.flaticon.com/authors/freepik"-->
 		</div>
 		
-		<div class="droite">
+		<div id="droite">
 			<p>Retrouvez moi sur</p>
 
-			<a href="https://github.com/Gaally" target="_blank"> <img class="logo_github" src="media/github.png"></a>
+			<a href="https://github.com/Gaally" target="_blank"> <img id="github" src="media/github.png"></a>
 		</div>
 
 	</footer>
