--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 			<p>Retrouvez moi sur</p>
 
 			<a href="https://github.com/Gaally" target="_blank"> <img id="github" src="media/github.png"></a>
+
+			<a href="https://github.com/manekineko17" target="_blank">Code par Marine</a>
 		</div>
 
 	</footer>
