--- a/index.html
+++ b/index.html
@@ -57,16 +57,19 @@
 	<footer>
 		
 		<div id="gauche">
-			<p>Application créée par<br>Tiphaine Le Priol</p>
+			<p>Application créée par <br> Tiphaine Le Priol</p>
+
+			<p>
+				<a id="marine" href="https://github.com/manekineko17" target="_blank">Codé par Marine</a>
+			</p>
+
 			<!--copyright href="https://www.flaticon.com/authors/freepik"-->
 		</div>
 		
 		<div id="droite">
-			<p>Retrouvez moi sur</p>
+			<p>Retrouvez Tiphaine sur</p>
 
 			<a href="https://github.com/Gaally" target="_blank"> <img id="github" src="media/github.png"></a>
-
-			<a href="https://github.com/manekineko17" target="_blank">Code par Marine</a>
 		</div>
 
 	</footer>
