deux-points compteur

--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
 				</tr> 
 				<tr> 
 					<td id="days"></td>
+					<!--<td class="dot"></td>-->
 					<td id="hours"></td>
+					<!--<td class="dot"></td>-->
 					<td id="minutes"></td>
+					<!--<td class="dot"></td>-->
 					<td id="seconds"></td>
 				</tr>
 			</table>
