--- a/index.html
+++ b/index.html
@@ -32,11 +32,8 @@
 				</tr> 
 				<tr> 
 					<td id="days"></td>
-					<!--<td class="dot"></td>-->
 					<td id="hours"></td>
-					<!--<td class="dot"></td>-->
 					<td id="minutes"></td>
-					<!--<td class="dot"></td>-->
 					<td id="seconds"></td>
 				</tr>
 			</table>
@@ -59,21 +56,21 @@
 
 	<footer>
 		
-		<div id="gauche">
+		<div id="gauche" class="block">
 			<p>Application créée par <br> Tiphaine Le Priol</p>
 
 			<p>
 				<a id="marine" href="https://github.com/manekineko17" target="_blank">Codé par Marine</a>
 			</p>
 
-			<!--copyright href="https://www.flaticon.com/authors/freepik"-->
 		</div>
 		
-		<div id="droite">
-			<p>Retrouvez Tiphaine sur</p>
+		<div id="droite" class="block">
+			<p class="block">Retrouvez Tiphaine sur</p>
 
-			<a href="https://github.com/Gaally" target="_blank"> <img id="github" src="media/github.png"></a>
+			<a class="block" href="https://github.com/Gaally" target="_blank"> <img id="github" src="media/github.png"></a>
 		</div>
+		<!--copyright href="https://www.flaticon.com/authors/freepik"-->
 
 	</footer>
 
